<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tabs.HomeTabFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:weightSum="1"
        tools:ignore="UselessParent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_tab_next_workout_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="0.33">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/home_tab_next_workout_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:text="@string/main_next_workout"
                    android:padding="16dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/home_tab_next_workout_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="#424242"
                    android:padding="16dp"/>
                <TextView
                    android:id="@+id/home_tab_next_workout_exercises"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:padding="16dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_tab_today_workout_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="0.33">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/home_tab_today_workout_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:text="@string/main_today_workout"
                    android:padding="16dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/home_tab_today_workout_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="#424242"
                    android:padding="16dp"/>
                <TextView
                    android:id="@+id/home_tab_today_workout_card_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:padding="16dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/home_tab_previous_workout_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="0.33">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/home_tab_previous_workout_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:text="@string/main_previous_workout"
                    android:padding="16dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/home_tab_previous_workout_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:textColor="#424242"
                    android:padding="16dp"/>
                <TextView
                    android:id="@+id/home_tab_previous_workout_card_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#424242"
                    android:padding="16dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
