<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:paddingTop="50dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_setup"
    tools:context="com.athelite.Activity.SetupActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lets_set_up"
        android:id="@+id/setup_lets_set_things_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/setup_information_disclaimer"
        android:id="@+id/setup_exp"
        android:layout_below="@+id/setup_lets_set_things_up"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/units_setup"
        android:id="@+id/setup_units_text"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/setup_exp"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setup_units"
        android:layout_below="@+id/setup_units_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_imperial"
            android:id="@+id/setup_pounds"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_metric"
            android:id="@+id/setup_kilograms"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_select_units_string"
        android:id="@+id/setup_units_text_helper"
        android:layout_below="@+id/setup_units_text"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setup_units_text_helper"
        android:layout_alignParentStart="true"
        android:id="@+id/setup_space"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_height_string"
        android:id="@+id/setup_height_text"
        android:layout_below="@+id/setup_information_disclaimer_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/setup_edit_height"
        android:layout_below="@+id/setup_information_disclaimer_text"
        android:layout_alignStart="@+id/setup_edit_weight"
        tools:ignore="LabelFor"
        android:layout_alignEnd="@+id/setup_units_text_helper" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_height_units_string"
        android:id="@+id/setup_height_units"
        android:layout_alignTop="@+id/setup_height_text"
        android:layout_toEndOf="@+id/setup_edit_height" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setup_height_text"
        android:layout_alignParentStart="true"
        android:id="@+id/setup_space2"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_weight_string"
        android:id="@+id/setup_weight_text"
        android:layout_alignTop="@+id/setup_space2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/setup_edit_weight"
        tools:ignore="LabelFor"
        android:layout_below="@+id/setup_height_units"
        android:layout_alignEnd="@+id/setup_units_text_helper"
        android:layout_toEndOf="@+id/setup_gender_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_weight_text_string"
        android:id="@+id/setup_weight_units"
        android:layout_alignTop="@+id/setup_weight_text"
        android:layout_toEndOf="@+id/setup_edit_weight" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setup_edit_weight"
        android:layout_alignParentStart="true"
        android:id="@+id/setup_space3"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_age_units_string"
        android:id="@+id/setup_age_units"
        android:layout_alignTop="@+id/setup_age_text"
        android:layout_toEndOf="@+id/setup_edit_age" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/setup_edit_age"
        tools:ignore="LabelFor"
        android:layout_below="@+id/setup_weight_units"
        android:layout_alignStart="@+id/setup_edit_weight"
        android:layout_toStartOf="@+id/setup_weight_units" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_age_text_string"
        android:id="@+id/setup_age_text"
        android:layout_alignBottom="@+id/setup_space3"
        android:layout_alignParentStart="true" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setup_edit_age"
        android:layout_alignParentStart="true"
        android:id="@+id/setup_space4"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_gender_text_string"
        android:id="@+id/setup_gender_text"
        android:layout_alignTop="@+id/setup_space4"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setup_gender_spinner"
        android:spinnerMode="dropdown"
        android:layout_alignBaseline="@+id/setup_gender_text"
        android:layout_alignBottom="@+id/setup_gender_text"
        android:layout_alignStart="@+id/setup_edit_age"
        android:layout_toStartOf="@+id/setup_age_units" />

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/setup_gender_text"
        android:layout_alignParentStart="true"
        android:id="@+id/space5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/setup_change_info_string"
        android:id="@+id/setup_information_disclaimer_text"
        android:layout_below="@+id/setup_profile_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setup_profile_string"
        android:id="@+id/setup_profile_text"
        android:layout_below="@+id/setup_units"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />


</RelativeLayout>
</ScrollView>