<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/workout_tab_layout">
    <!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/workout_tab_empty_list"
        android:src="@drawable/empty_list"
        android:contentDescription="@string/empty_list" />-->

    <TextView
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workout_tab_empty_list_text"
        android:text="@string/workout_tab_empty_list"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal" />
    <TextView
        android:textSize="18sp"
        android:layout_width="match_parent"
...
